components/GameTaskDrawer/styles.module.scss
.taskBox {
  // position: relative;
  // z-index: 1800;
  height: calc(100vh - 9rem);
  background: #f6f1fd;
  padding: 1.5rem 1.33rem;
  padding-top: 2.33rem;
  overflow-y: scroll;
  overscroll-behavior: none;

  .taskInfoBox {
    position: relative;
    width: 100%;
    display: block;
    min-height: calc(50vh - 3rem);
    background-color: white;
    border-radius: 0.67rem 0.67rem 0rem 0rem;
    // padding-top: 3.17rem;
    margin-bottom: 5rem;
    padding-top: 3.92rem;

    .itemLabel {
      position: absolute;
      width: 3.33rem;
      height: 3rem;
      top: -0.67rem;
      left: 1.5rem;
      font-size: 1.75rem;
      font-family: Inter-SemiBold, Inter;
      font-weight: 600;
      color: #ffffff;
      line-height: 2rem;
      display: flex;
      align-items: center;
      justify-content: center;
      border-color: transparent;
      background: linear-gradient(180deg, #6effc4 0%, #984cec 100%);
      box-shadow: -0.17rem 0.17rem 0.33rem 0rem rgba(142, 80, 228, 0.3);
      border-radius: 0rem 1rem 0rem 1rem;
      user-select: none;
      &::before {
        display: block;
        content: '';
        width: 0;
        height: 0;
        position: absolute;
        border: 4px solid transparent;
        border-right: 4px solid #4d3372;
        border-bottom: 4px solid #4d3372;
        left: -8px;
        top: 0px;
      }
    }

    .taskHeader {
      display: flex;
      margin: 0rem 1rem 1.75rem;

      p {
        font-size: 1.33rem;
        font-family: Inter-Medium, Inter;
        font-weight: 500;
        color: #222222;
        line-height: 2rem;
      }

      .stepPannel {
        display: flex;
        flex-grow: 1;
        justify-content: space-between;

        .baseBtn {
          width: 2.67rem;
          height: 2.67rem;
          background: #8e50e4;
          border-radius: 1.5rem;
          border: 0.08rem solid #8e50e4;
          display: inline-flex;
          justify-content: center;
          align-items: center;
          color: white;
          cursor: pointer;
          flex-shrink: 0;
        }

        .stepBack,
        .stepNext {
          @extend .baseBtn;
        }

        .disableBtn {
          background: rgba(#222, 0.2);
          border-radius: 1.5rem;
          border: none;
          cursor: default;
        }

        .stepBox {
          display: flex;
          flex-grow: 1;
          justify-content: center;
          align-items: flex-start;
          svg {
            height: 1.17rem;
            line-height: 1.17rem;
            color: rgba(#222, 0.2);
          }
          .activeNextIcon {
            color: #8e50e4;
          }
        }
      }
    }

    .stepDesc {
      font-size: 1.17rem;
      font-family: Inter-Medium, Inter;
      font-weight: 500;
      color: #222222;
      line-height: 2rem;
      margin: 0rem 1rem 1.67rem;
    }

    .btnList {
      display: flex;
      margin: auto 0.5rem 1.67rem;
      flex-wrap: wrap;
    }

    .imageList {
      display: flex;
      flex-direction: column;

      .imageBox {
        position: relative;
        width: 100%;
        height: auto;
        img {
          width: 100%;
          object-fit: contain;
        }

        & + .imageBox {
          margin-top: 0.92rem;
        }
      }
    }
  }
  .stepBtns {
    position: fixed;
    bottom: 2rem;
    left: 0.83rem;
    right: 0.83rem;
    // margin-top: 1.67rem;
    // margin-bottom: 1.17rem;
    display: flex;
    justify-content: space-between;
    align-items: center;

    .backBtn {
      width: 7.33rem;
      height: 2.67rem;
      background: #222222;
      border-radius: 1.5rem;
      border: 0.08rem solid #ffffff;
      display: inline-flex;
      align-items: center;
      justify-content: center;
      cursor: pointer;
      user-select: none;
      font-size: 1.17rem;
      font-family: Inter-Medium, Inter;
      font-weight: 500;
      color: #ffffff;
      line-height: 1.17rem;
    }

    .nextBtn {
      width: 7.33rem;
      height: 2.67rem;
      background: #222222;
      border-radius: 1.5rem;
      border: 0.08rem solid #ffffff;
      display: inline-flex;
      align-items: center;
      justify-content: center;
      cursor: pointer;
      user-select: none;

      font-size: 1.17rem;
      font-family: Inter-Medium, Inter;
      font-weight: 500;
      color: #ffffff;
      line-height: 1.17rem;
    }
    .verifyBtn {
      width: 7.33rem;
      height: 2.67rem;
      background: #8e50e4;
      border-radius: 1.5rem;
      font-size: 1.17rem;
      font-family: Inter-Medium, Inter;
      font-weight: 500;
      color: #ffffff;
      line-height: 1.17rem;
      display: inline-flex;
      align-items: center;
      justify-content: center;
      cursor: pointer;
      user-select: none;
    }
  }
}

.taskStepItem {
  cursor: pointer;
  position: relative;
  font-size: 1.17rem;
  font-family: PingFangSC-Semibold, PingFang SC;
  font-weight: 600;
  color: rgba(#222, 0.5);
  line-height: 1.17rem;

  padding-bottom: 0.9rem;
  user-select: none;
  flex-grow: 1;
  // max-width: 5rem;
  display: flex;
  justify-content: center;
  align-items: center;
}
.activeStep {
  color: #8e50e4;
  &::after {
    display: inline-block;
    position: absolute;
    content: '';
    bottom: 0.08rem;
    width: 3rem;
    height: 0.33rem;
    background: #8e50e4;
    opacity: 0.8;
    border-radius: 60%;
    filter: blur(2px);
  }
}

.stepBtnItem {
  border-radius: 1.5rem;
  border: 0.04rem solid #222222;
  font-size: 1.17rem;
  font-family: Inter-Medium, Inter;
  font-weight: 500;
  color: #222222;
  line-height: 1.17rem;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding: 0.67rem 1.2rem;
  margin: 0.5rem 0.5rem;
  cursor: pointer;

  & + .stepBtnItem {
    // margin-left: 1rem;
  }
}

.drawerBox {
  z-index: 1600;
  top: 9rem;
  border-top-right-radius: 1rem;
  border-top-left-radius: 1rem;
  overscroll-behavior: none;

  :global {
    .MuiPaper-root {
      z-index: 1600;
      border-top-right-radius: 1rem;
      border-top-left-radius: 1rem;
      overscroll-behavior: none;
    }
    .MuiBackdrop-root {
      z-index: 1550;
    }
  }
}

